--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         <div class="footer-logo">LAYRON</div>
         <p>Contacto: empresa.layron@gmail.com</p>
         <br>
-        <p>© 2026 LAYRON Brand. Todos los derechos reservados.</p>
+        <p>© 2026 LAYRON Official. Todos los derechos reservados.</p>
     </footer>
 
     <script>
@@ -265,3 +265,4 @@
     </script>
 </body>
 </html>
+
