--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LAYRON | Modern Luxury Essentials</title>
-    <link rel="icon" href="logo.png" type="image/png">
+    <link rel="icon" href="logo.jpg" type="image/png">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -412,3 +412,4 @@
     </script>
 </body>
 </html>
+
