--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LAYRON | Modern Luxury Essentials</title>
-    <link rel="icon" href="logo.jpg" type="image/png">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -106,7 +105,7 @@
         .btn:hover { background: var(--text-main); color: var(--bg-color); }
         .btn-gold { border-color: var(--accent-gold); color: var(--accent-gold); }
         .btn-gold:hover { background: var(--accent-gold); color: var(--bg-color); }
-        .btn-full { width: 100%; text-align: center; margin-top: 10px; border: 1px solid var(--accent-gold); background: transparent; color: var(--accent-gold); padding: 10px; text-transform: uppercase; letter-spacing: 1px; font-size: 0.8rem; }
+        .btn-full { width: 100%; text-align: center; margin-top: 10px; border: 1px solid var(--accent-gold); background: transparent; color: var(--accent-gold); padding: 10px; text-transform: uppercase; letter-spacing: 1px; font-size: 0.8rem; transition: 0.3s; }
         .btn-full:hover { background: var(--accent-gold); color: black; }
 
         /* COUNTDOWN */
@@ -132,19 +131,47 @@
             background-size: cover; filter: grayscale(100%);
         }
 
-        /* COLLECTION */
+        /* --- ESTILOS DE LA COLECCIÓN ACTUALIZADOS (EFECTO PRO) --- */
         .collection { padding: 80px 5%; }
         .section-title { text-align: center; margin-bottom: 60px; }
         .section-title span { color: var(--accent-gold); text-transform: uppercase; letter-spacing: 3px; font-size: 0.8rem; }
         .section-title h3 { font-family: var(--font-heading); font-size: 2rem; margin-top: 10px; }
         .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; }
-        .card { background: var(--card-bg); transition: transform 0.3s; position: relative; }
-        .card:hover { transform: translateY(-5px); }
-        .card-img { width: 100%; height: 400px; object-fit: cover; filter: grayscale(20%); transition: 0.5s; }
-        .card:hover .card-img { filter: grayscale(0%); }
-        .card-info { padding: 20px; text-align: center; }
+        
+        /* Contenedor de la tarjeta */
+        .card { 
+            background: var(--card-bg); 
+            transition: all 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94); 
+            position: relative; 
+            overflow: hidden; /* Esto mantiene la imagen dentro de los bordes al hacer zoom */
+            border: 1px solid rgba(255,255,255,0.05); /* Borde sutil inicial */
+        }
+
+        /* Imagen */
+        .card-img { 
+            width: 100%; 
+            height: 400px; 
+            object-fit: cover; 
+            filter: grayscale(30%) brightness(0.9); /* Un poco oscura y desaturada al inicio */
+            transition: all 0.6s ease; /* Transición lenta y elegante */
+        }
+
+        /* Efecto Hover (Cuando pasas el mouse) */
+        .card:hover { 
+            transform: translateY(-10px); /* Sube un poco más */
+            box-shadow: 0 15px 30px rgba(212, 175, 55, 0.15); /* Resplandor dorado sutil */
+            border-color: rgba(212, 175, 55, 0.3); /* Borde dorado tenue */
+        }
+
+        .card:hover .card-img { 
+            transform: scale(1.05); /* Zoom leve (5%) */
+            filter: grayscale(0%) brightness(1.1); /* Full color y luz extra */
+        }
+
+        .card-info { padding: 25px 20px; text-align: center; position: relative; z-index: 2; background: var(--card-bg); }
         .card-title { font-size: 0.9rem; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 8px; }
         .card-price { color: var(--accent-gold); font-size: 0.9rem; font-weight: 300; margin-bottom: 15px; display: block; }
+        /* --------------------------------------------------------- */
 
         /* NEWSLETTER & SOCIAL */
         .newsletter {
@@ -412,4 +439,3 @@
     </script>
 </body>
 </html>
-
