--- a/index.html
+++ b/index.html
@@ -40,13 +40,6 @@
         a { text-decoration: none; color: inherit; transition: 0.3s; }
         button { cursor: pointer; font-family: var(--font-body); border: none; outline: none; }
 
-        /* --- TEXTURA DE CINE (NOISE) --- */
-        .noise-overlay {
-            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            pointer-events: none; z-index: 900; opacity: 0.05;
-            background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
-        }
-
         /* --- NAV PRO --- */
         nav {
             position: fixed; top: 0; width: 100%; padding: 20px 6%;
@@ -136,7 +129,7 @@
             background-size: cover; filter: grayscale(100%); border: 1px solid rgba(212, 175, 55, 0.2); box-shadow: 10px 10px 0px rgba(212, 175, 55, 0.05);
         }
 
-        /* --- MOODBOARD (NUEVO) --- */
+        /* --- MOODBOARD --- */
         .moodboard { padding: 0; display: flex; flex-wrap: wrap; }
         .mood-item { flex: 1 1 25%; height: 400px; position: relative; overflow: hidden; border: 1px solid rgba(255,255,255,0.05); }
         .mood-img { width: 100%; height: 100%; object-fit: cover; filter: grayscale(100%) contrast(1.2); transition: 0.5s ease; }
@@ -240,8 +233,6 @@
     </style>
 </head>
 <body>
-
-    <div class="noise-overlay"></div>
 
     <nav>
         <div class="logo-container">
