--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             background-size: cover; filter: grayscale(100%); border: 1px solid rgba(212, 175, 55, 0.2); box-shadow: 10px 10px 0px rgba(212, 175, 55, 0.05);
         }
 
-        /* --- MOODBOARD --- */
+        /* --- MOODBOARD (ACTUALIZADO) --- */
         .moodboard { padding: 0; display: flex; flex-wrap: wrap; }
         .mood-item { flex: 1 1 25%; height: 400px; position: relative; overflow: hidden; border: 1px solid rgba(255,255,255,0.05); }
         .mood-img { width: 100%; height: 100%; object-fit: cover; filter: grayscale(100%) contrast(1.2); transition: 0.5s ease; }
@@ -333,7 +333,7 @@
             <div class="mood-overlay">MATERIA</div>
         </div>
         <div class="mood-item">
-            <img src="https://images.unsplash.com/photo-1486718448742-163732cd1544?q=80&w=1587&auto=format&fit=crop" class="mood-img" alt="Arquitectura">
+            <img src="https://images.unsplash.com/photo-1518005020951-eccb494ad2dc?q=80&w=1587&auto=format&fit=crop" class="mood-img" alt="Arquitectura">
             <div class="mood-overlay">ESTRUCTURA</div>
         </div>
         <div class="mood-item">
